VSCP-4417: Priv CLI support (#2819)
